--- a/src/main/webapp/clinical/clinical_administration.xhtml
+++ b/src/main/webapp/clinical/clinical_administration.xhtml
@@ -22,6 +22,8 @@
                             <p:commandButton styleClass="linkButton" ajax="false" value="Plan of actions" action="/clinical/clinical_plans" onclick="onSubmitButton();" ></p:commandButton>
                             <p:commandButton styleClass="linkButton" ajax="false" value="Treatements" action="/clinical/clinical_treatment" onclick="onSubmitButton();" ></p:commandButton>
 
+                            <p:commandButton styleClass="linkButton" ajax="false" value="Upload Patients" action="#{patientDataUploadBean.toUploadPatients()}"  ></p:commandButton>
+
 
                         </h:panelGrid>
                     </p:panel>
