Signed-off-by: buddhika75 <buddhika.ari@gmail.com>

--- a/src/main/webapp/emr/setup/upload_patients.xhtml
+++ b/src/main/webapp/emr/setup/upload_patients.xhtml
@@ -16,11 +16,11 @@
                         </div>
                         <div class="card-body" >
                             <h:form enctype="multipart/form-data">
-                                <p:fileUpload value="#{patientDataUploadBean.file}"
+                                <p:fileUpload value="#{dataUploadBean.file}"
                                               mode="simple"
                                               label="Choose File"/>
                                 <p:commandButton value="Upload"
-                                                 action="#{patientDataUploadBean.upload}"
+                                                 action="#{dataUploadBean.uploadPatients}"
                                                  ajax="false"/>
                             </h:form>
 
