--- a/src/main/webapp/pharmacy/pharmacy_atm.xhtml
+++ b/src/main/webapp/pharmacy/pharmacy_atm.xhtml
@@ -15,27 +15,27 @@
                         <div class="container">
                             <div class="row">
                                 <div class="col-md-6">
-                                    <h2>Manage Virtual Therapeutic Moiety</h2>
+                                    <h2>Manage Actual Therapeutic Moiety</h2>
                                     <div class="card mb-3">
-                                        <div class="card-header">Search Vtm</div>
+                                        <div class="card-header">Search Atm</div>
                                         <div class="card-body">
-                                            <h:inputText autocomplete="off" id="txtSearch" value="#{vtmController.selectText}" class="form-control" >
+                                            <h:inputText autocomplete="off" id="txtSearch" value="#{atmController.selectText}" class="form-control" >
                                                 <f:ajax execute="txtSearch" render="lstSelect" event="keyup" />
                                             </h:inputText>
-                                            <p:selectOneListbox  style="height: 100%;" converter="vtm"  id="lstSelect" value="#{vtmController.current}" >
-                                                <f:selectItems  value="#{vtmController.selectedItems}" var="myItem" itemValue="#{myItem}" itemLabel="#{myItem.name}" ></f:selectItems>
+                                            <p:selectOneListbox id="lstSelect" value="#{atmController.current}" style="min-width: 223px; height: 300px;max-height: 400px;">
+                                                <f:selectItems  value="#{atmController.selectedItems}" var="myItem" itemValue="#{myItem}" itemLabel="#{myItem.name}" ></f:selectItems>
                                                 <p:ajax event="change"   update="gpDetail" process="lstSelect" >
                                                 </p:ajax>
                                             </p:selectOneListbox>
                                         </div>
                                         <div class="card-footer">
                                             <div class="d-flex justify-content-between">
-                                                <h:commandButton id="btnAdd" value="Add" action="#{vtmController.prepareAdd()}" styleClass="buttons btn btn-primary" >
+                                                <h:commandButton id="btnAdd" value="Add" action="#{atmController.prepareAdd()}" styleClass="buttons btn btn-primary" >
                                                     <f:ajax render="btnAdd  btnDelete btnSave   lstSelect gpDetail " execute="" >
                                                     </f:ajax>
                                                 </h:commandButton>
                                                 <h:commandButton id="btnDelete" onclick="if (!confirm('Are you sure you want to delete this record?'))
-                                                            return false;" action="#{vtmController.delete()}"  value="Delete" class="btn btn-danger" >
+                                                            return false;" action="#{atmController.delete()}"  value="Delete" class="btn btn-danger" >
                                                 </h:commandButton>
                                             </div>
                                         </div>
@@ -48,7 +48,7 @@
                                         <div class="card">
                                             <div class="card-header d-flex justify-content-between">
                                                 <h3>Edit Details</h3>
-                                                <p:commandButton id="btnSave" value="Save"  action="#{vtmController.saveSelected()}" styleClass="buttons btn btn-primary" 
+                                                <p:commandButton id="btnSave" value="Save"  action="#{atmController.saveSelected()}" styleClass="buttons btn btn-primary" 
                                                                  ajax="false" >
                                                 </p:commandButton>
                                                 <p:defaultCommand target="btnSave"/>
@@ -57,7 +57,15 @@
 
                                                 <div class="mb-3">
                                                     <label for="lblName" class="form-label">Name</label>
-                                                    <h:inputText autocomplete="off" id="txtName" value="#{vtmController.current.name}" required="true" class="form-control" ></h:inputText>
+                                                    <h:inputText autocomplete="off" id="txtName" value="#{atmController.current.name}" 
+                                                                 required="true" class="form-control" ></h:inputText>
+                                                    <label for="lblVtm" class="form-label">VTM</label>
+                                                    <p:autoComplete completeMethod="#{vtmController.completeVtm}" 
+                                                                    value="#{atmController.current.vtm}" var="v"
+                                                                    inputStyleClass="form-control"
+                                                                    class="form-control"
+                                                                    itemLabel="#{v.name}" itemValue="#{v}" ></p:autoComplete>
+                                                
                                                 </div>
                                             </div>
                                         </div>
