--- a/src/main/webapp/clinical/clinical_administration.xhtml
+++ b/src/main/webapp/clinical/clinical_administration.xhtml
@@ -25,6 +25,8 @@
                             <p:commandButton styleClass="linkButton" ajax="false" value="Upload Patients" action="#{dataUploadBean.toUploadPatients()}"  ></p:commandButton>
                             <p:commandButton styleClass="linkButton" ajax="false" value="Upload VTMs" action="#{dataUploadBean.toUploadVtms()}"  ></p:commandButton>
                             <p:commandButton styleClass="linkButton" ajax="false" value="Upload ATMs" action="#{dataUploadBean.toUploadAtms()}"  ></p:commandButton>
+                            <p:commandButton styleClass="linkButton" ajax="false" value="Upload VMPs" action="#{dataUploadBean.toUploadVmps()}"  ></p:commandButton>
+                            <p:commandButton styleClass="linkButton" ajax="false" value="Upload AMPs" action="#{dataUploadBean.toUploadAmps()}"  ></p:commandButton>
 
 
                         </h:panelGrid>
