--- a/src/main/webapp/resources/ezcomp/menu.xhtml
+++ b/src/main/webapp/resources/ezcomp/menu.xhtml
@@ -669,13 +669,15 @@
                            rendered="#{webUserController.hasPrivilege('Clinical')}">
                     <p:menuitem ajax="false" action="#{patientController.toSearchPatient()}" icon="pi pi-search" value="Patient Search"/>
 
-                    <p:menuitem ajax="false" action="/clinical/clinical_patient_for_receptionist" value="Patients"/>
-                    <p:menuitem ajax="false" action="/patient_registration" value="Patient Registration"/>
-                    <p:menuitem ajax="false" action="/clinical/membership_registration" value="Membership"/>
-                    <p:menuitem ajax="false" action="/clinical/clinical_queue" value="Queue"/>
-                    <p:menuitem ajax="false" action="/clinical/clinical_reports_index" value="Reports"/>
-                    <p:menuitem ajax="false" action="/clinical/favourite_index" value="Favourites"/>
-                    <p:menuitem ajax="false" action="/clinical/clinical_administration" value="Administration"/>
+                    <p:menuitem ajax="false" action="#{emrController.navigateToClinicalPatientForReceptionist()}" value="Patients"/>
+                    <p:menuitem ajax="false" action="#{emrController.navigateToPatientRegistration()}" value="Patient Registration"/>
+                    <p:menuitem ajax="false" action="#{emrController.navigateToMembershipRegistration()}" value="Membership"/>
+                    <p:menuitem ajax="false" action="#{emrController.navigateToClinicalQueue()}" value="Queue"/>
+                    <p:menuitem ajax="false" action="#{emrController.navigateToClinicalReportsIndex()}" value="Reports"/>
+                    <p:menuitem ajax="false" action="#{emrController.navigateToClinicalFavouriteIndex()}" value="Favourites"/>
+                    <p:menuitem ajax="false" action="#{emrController.navigateToClinicalAdministration()}" value="Administration"/>
+
+
                 </p:submenu>
 
 
