--- a/src/main/webapp/emr/setup/upload_vmps.xhtml
+++ b/src/main/webapp/emr/setup/upload_vmps.xhtml
@@ -1,63 +1,78 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>VMPS Table</title>
-    <style>
-        table {
-            width: 100%;
-            border-collapse: collapse;
-        }
-        th, td {
-            padding: 8px;
-            text-align: left;
-            border-bottom: 1px solid #ddd;
-        }
-        th {
-            background-color: #f2f2f2;
-        }
-    </style>
-</head>
-<body>
-    <table>
-        <thead>
-            <tr>
-                <th>ID</th>
-                <th>VMP Name</th>
-                <th>VTM Name</th>
-                <th>Dosage Form</th>
-                <th>Strength Units/Issue Unit</th>
-                <th>Strength Unit</th>
-                <th>Issue Unit</th>
-                <th>Issue Units/Pack</th>
-                <th>Pack Unit</th>
-                <th>Min Issue Quantity</th>
-                <th>Min Issue Unit</th>
-                <th>Issue Multiplies Quantity</th>
-                <th>Issue Multiplies Unit</th>
-            </tr>
-        </thead>
-        <tbody>
-            <!-- You will have to populate this tbody with data from the readVmpsFromExcel method -->
-            <tr>
-                <td>1</td>
-                <td>Sample VMP</td>
-                <td>Sample VTM</td>
-                <td>Sample Dosage Form</td>
-                <td>1.0</td>
-                <td>Sample Strength Unit</td>
-                <td>Sample Issue Unit</td>
-                <td>2.0</td>
-                <td>Sample Pack Unit</td>
-                <td>3.0</td>
-                <td>Sample Min Issue Unit</td>
-                <td>4.0</td>
-                <td>Sample Issue Multiplies Unit</td>
-            </tr>
-            <!-- Add more rows for each VMP -->
-        </tbody>
-    </table>
-</body>
+<?xml version='1.0' encoding='UTF-8' ?>
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml"
+      xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+      xmlns:h="http://xmlns.jcp.org/jsf/html"
+      xmlns:p="http://primefaces.org/ui">
+    <h:head>
+    </h:head>
+    <h:body>
+        <ui:composition template="/resources/template/template.xhtml">
+            <ui:define name="content">
+
+                <div class="container-fluid" >
+                    <div class="card" >
+                        <div class="card-header" >
+                            <h2>Upload VMPs</h2>
+                        </div>
+                        <div class="card-body" >
+                            <h:form enctype="multipart/form-data">
+                                <p:fileUpload value="#{dataUploadBean.file}"
+                                              mode="simple"
+                                              label="Choose File"/>
+                                <p:commandButton value="Upload"
+                                                 action="#{dataUploadBean.uploadVmps()}"
+                                                 ajax="false"/>
+                            </h:form>
+
+                            <table>
+                                <tr>
+                                    <th>ID</th>
+                                </tr>
+                                <tr>
+                                    <th>VMP Name</th>
+                                </tr>
+                                <tr>
+                                    <th>VTM Name</th>
+                                </tr>
+                                <tr>
+                                    <th>Dosage Form</th>
+                                </tr>
+                                <tr>
+                                    <th>Strength Units per Issue Unit</th>
+                                </tr>
+                                <tr>
+                                    <th>Strength Unit</th>
+                                </tr>
+                                <tr>
+                                    <th>Issue Unit</th>
+                                </tr>
+                                <tr>
+                                    <th>Issue Units Per Pack</th>
+                                </tr>
+                                <tr>
+                                    <th>Pack Unit</th>
+                                </tr>
+                                <tr>
+                                    <th>Min Issue Quantity</th>
+                                </tr>
+                                <tr>
+                                    <th>Min Issue Unit</th>
+                                </tr>
+                                <tr>
+                                    <th>Issue Multiplies Quantity</th>
+                                </tr>
+                                <tr>
+                                    <th>Issue Multiplies Unit</th>
+                                </tr>
+                            </table>
+
+                        </div>
+                    </div>
+                </div>
+
+
+            </ui:define>
+        </ui:composition>
+    </h:body>
 </html>
